# CardJitsuSnow

./: .gitignore  AUTHORS  Makefile.am  configure.ac
data/: Makefile.am
data/desktop/: snow.desktop
data/images/: ui_cards.xcf
data/server/: Makefile.am
etc/: Info.plist.in  Makefile.am  snow.icns
po/: POTFILES.in  card_jitsu_snow.pot
server/: Makefile.am  netplay.c  netplay.h  server.c  server_ninja.h  server_timer.c  snow.h
src/: Makefile.am  cp-button.c  cp-button.h  draw-text.c  draw-text.h  enemy.c  enemy.h  fire_ninja.c  fire_ninja.h  netplay.c  netplay.h  ninja.c  ninja.h  path.c  path.h  rotar.c  rotar.h  select_server.c  select_server.h  server.c  server_ia.c  server_ia.h  server_ninja.c  server_ninja.h  server_timer.c  server_timer.h  snow.c  snow.h  snow.rc  snow_ninja.c  snow_ninja.h  uitimer.c  uitimer.h  water_ninja.c  water_ninja.h
