gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/icon.png \
	images/background_1.png \
	images/background_2.png \
	images/background_3.png \
	images/foreground_1.png \
	images/foreground_2.png \
	images/crag_rock.png \
	images/rock.png \
	images/frame.png \
	images/tile_attack.png \
	images/tile_heal.png \
	images/tile_move.png \
	images/tile_no_move.png \
	images/round_1.png \
	images/round_2.png \
	images/round_3.png \
	images/checkmark.png \
	images/water_ninja/idle.png \
	images/water_ninja/attack.png \
	images/water_ninja/celebrate.png \
	images/water_ninja/move.png \
	images/water_ninja/ghost.png \
	images/water_ninja/hit.png \
	images/water_ninja/knockout_intro.png \
	images/water_ninja/knockout_loop.png \
	images/water_ninja/powercard_fishdrop.png \
	images/water_ninja/powercard_summon.png \
	images/water_ninja/powercard_water_loop.png \
	images/water_ninja/revived.png \
	images/water_ninja/revive_other.png \
	images/water_ninja/revive_other_loop.png \
	images/fire_ninja/attack.png \
	images/fire_ninja/celebrate.png \
	images/fire_ninja/celebrate_intro.png \
	images/fire_ninja/ghost.png \
	images/fire_ninja/hit.png \
	images/fire_ninja/idle.png \
	images/fire_ninja/knockout_intro.png \
	images/fire_ninja/knockout_loop.png \
	images/fire_ninja/move.png \
	images/fire_ninja/powercard_bottledrop.png \
	images/fire_ninja/powercard_fire_loop.png \
	images/fire_ninja/powercard_summon.png \
	images/fire_ninja/revived.png \
	images/fire_ninja/revive_other.png \
	images/fire_ninja/revive_other_loop.png \
	images/snow_ninja/attack.png \
	images/snow_ninja/celebrate.png \
	images/snow_ninja/ghost.png \
	images/snow_ninja/heal.png \
	images/snow_ninja/hit.png \
	images/snow_ninja/idle.png \
	images/snow_ninja/knockout_intro.png \
	images/snow_ninja/knockout_loop.png \
	images/snow_ninja/move.png \
	images/snow_ninja/powercard_igloo_1.png \
	images/snow_ninja/powercard_igloo_2.png \
	images/snow_ninja/powercard_snow.png \
	images/snow_ninja/powercard_summon.png \
	images/snow_ninja/revived.png \
	images/snow_ninja/revive_other.png \
	images/snow_ninja/revive_other_loop.png \
	images/ui_fire_cards.png \
	images/ui_snow_cards.png \
	images/ui_water_cards.png \
	images/fire_timer/base.png \
	images/fire_timer/button_deactive.png \
	images/fire_timer/button_down.png \
	images/fire_timer/button_over.png \
	images/fire_timer/button_up.png \
	images/fire_timer/button_selected.png \
	images/fire_timer/tick0.png \
	images/fire_timer/tick1.png \
	images/fire_timer/tick2.png \
	images/fire_timer/tick3.png \
	images/fire_timer/tick4.png \
	images/fire_timer/tick5.png \
	images/fire_timer/tick6.png \
	images/fire_timer/tick7.png \
	images/fire_timer/tick8.png \
	images/fire_timer/tick9.png \
	images/snow_timer/base.png \
	images/snow_timer/button_deactive.png \
	images/snow_timer/button_down.png \
	images/snow_timer/button_over.png \
	images/snow_timer/button_up.png \
	images/snow_timer/button_selected.png \
	images/snow_timer/tick0.png \
	images/snow_timer/tick1.png \
	images/snow_timer/tick2.png \
	images/snow_timer/tick3.png \
	images/snow_timer/tick4.png \
	images/snow_timer/tick5.png \
	images/snow_timer/tick6.png \
	images/snow_timer/tick7.png \
	images/snow_timer/tick8.png \
	images/snow_timer/tick9.png \
	images/water_timer/base.png \
	images/water_timer/button_deactive.png \
	images/water_timer/button_down.png \
	images/water_timer/button_over.png \
	images/water_timer/button_up.png \
	images/water_timer/button_selected.png \
	images/water_timer/tick0.png \
	images/water_timer/tick1.png \
	images/water_timer/tick2.png \
	images/water_timer/tick3.png \
	images/water_timer/tick4.png \
	images/water_timer/tick5.png \
	images/water_timer/tick6.png \
	images/water_timer/tick7.png \
	images/water_timer/tick8.png \
	images/water_timer/tick9.png \
	images/intro/background.png \
	images/intro/background_tusk.png \
	images/intro/fire_normal.png \
	images/intro/fire_over.png \
	images/intro/fire_selected_01.png \
	images/intro/fire_selected_02.png \
	images/intro/fire_selected_03.png \
	images/intro/fire_selected_04.png \
	images/intro/fire_selected_05.png \
	images/intro/fire_selected_06.png \
	images/intro/fire_selected_07.png \
	images/intro/fire_selected_08.png \
	images/intro/fire_selected_09.png \
	images/intro/fire_selected_10.png \
	images/intro/fire_selected_11.png \
	images/intro/fire_selected_12.png \
	images/intro/fire_selected_13.png \
	images/intro/fire_selected_14.png \
	images/intro/fire_selected_15.png \
	images/intro/fire_selected_16.png \
	images/intro/fire_shadow.png \
	images/intro/snow_normal.png \
	images/intro/snow_over.png \
	images/intro/snow_selected_01.png \
	images/intro/snow_selected_02.png \
	images/intro/snow_selected_03.png \
	images/intro/snow_selected_04.png \
	images/intro/snow_selected_05.png \
	images/intro/snow_selected_06.png \
	images/intro/snow_selected_07.png \
	images/intro/snow_selected_08.png \
	images/intro/snow_selected_09.png \
	images/intro/snow_selected_10.png \
	images/intro/snow_selected_11.png \
	images/intro/snow_selected_12.png \
	images/intro/snow_selected_13.png \
	images/intro/snow_selected_14.png \
	images/intro/snow_selected_15.png \
	images/intro/snow_selected_16.png \
	images/intro/snow_shadow.png \
	images/intro/water_normal.png \
	images/intro/water_over.png \
	images/intro/water_selected_01.png \
	images/intro/water_selected_02.png \
	images/intro/water_selected_03.png \
	images/intro/water_selected_04.png \
	images/intro/water_selected_05.png \
	images/intro/water_selected_06.png \
	images/intro/water_selected_07.png \
	images/intro/water_selected_08.png \
	images/intro/water_selected_09.png \
	images/intro/water_selected_10.png \
	images/intro/water_selected_11.png \
	images/intro/water_selected_12.png \
	images/intro/water_selected_13.png \
	images/intro/water_selected_14.png \
	images/intro/water_selected_15.png \
	images/intro/water_selected_16.png \
	images/intro/water_shadow.png \
	images/enemy/snowman_spawn.png \
	images/enemy/sly_idle.png \
	images/enemy/sly_attack.png \
	images/enemy/sly_daze.png \
	images/enemy/sly_hit.png \
	images/enemy/sly_move.png \
	images/enemy/sly_ko.png \
	images/enemy/scrap_idle.png \
	images/enemy/scrap_attack.png \
	images/enemy/scrap_daze.png \
	images/enemy/scrap_hit.png \
	images/enemy/scrap_move.png \
	images/enemy/scrap_ko.png \
	images/enemy/tank_idle.png \
	images/enemy/tank_attack.png \
	images/enemy/tank_daze.png \
	images/enemy/tank_hit.png \
	images/enemy/tank_move.png \
	images/enemy/tank_ko.png \
	images/healthbar.png \
	images/target_green_attack_selected.png \
	images/target_green_attack_selected_intro.png \
	images/target_red_attack_idle.png \
	images/target_red_attack_intro.png


# Instalar los archivos .desktop e iconos
applicationsdir = $(datadir)/applications
applications_DATA = desktop/snow.desktop

icons16dir = $(datadir)/icons/hicolor/16x16/apps
icons16_DATA = desktop/16x16/snow.png

icons32dir = $(datadir)/icons/hicolor/32x32/apps
icons32_DATA = desktop/32x32/snow.png

icons48dir = $(datadir)/icons/hicolor/48x48/apps
icons48_DATA = desktop/48x48/snow.png

icons64dir = $(datadir)/icons/hicolor/64x64/apps
icons64_DATA = desktop/64x64/snow.png

icons128dir = $(datadir)/icons/hicolor/128x128/apps
icons128_DATA = desktop/128x128/snow.png

icons256dir = $(datadir)/icons/hicolor/256x256/apps
icons256_DATA = desktop/256x256/snow.png

# touch the toplevel icon directory as required by the icon theme spec
install-data-hook:
	touch $(DESTDIR)$(datadir)/icons/hicolor

EXTRA_DIST = \
	desktop/snow.desktop	\
	desktop/16x16/snow.png		\
	desktop/32x32/snow.png		\
	desktop/48x48/snow.png		\
	desktop/64x64/snow.png		\
	desktop/128x128/snow.png		\
	desktop/256x256/snow.png		\
	snow.ico
